@@ -1,3 +1,8 @@
+2008-05-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/36137
+	* gcc.c-torture/execute/20080506-1.c: New test.
+
 2008-05-06  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR libfortran/35995
